--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 
     <modules>
         <module>eureka-server</module>
-        <module>eureka-client</module>
-        <module>eureka-client-2</module>
+        <module>api-bot</module>
+        <module>api-worker-bot</module>
         <module>api-gateway</module>
         <!-- Добавьте сюда другие модули по мере необходимости -->
     </modules>
