--- a/api-bot/src/main/resources/application.properties
+++ b/api-bot/src/main/resources/application.properties
@@ -2,16 +2,17 @@ spring.application.name=api-bot
 
 server.port=0
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-bot.token=${BOT_TOKEN}
-bot.name=@EmergencyNotificationBot
-bot.url=https://9f2c-176-120-118-140.ngrok-free.app
+#bot.token=${BOT_TOKEN}
+#bot.name=@EmergencyNotificationBot
+#bot.url=https://b297-176-120-118-140.ngrok-free.app
